# codecrafters-shell

./: CMakeLists.txt  README.md  your_program.sh
src/: CommandRegistry.cpp  CommandRegistry.hpp  EchoCommand.cpp  EchoCommand.hpp  ExitCommand.cpp  ExitCommand.hpp  ExternalCommand.cpp  ExternalCommand.hpp  ICommand.hpp  PwdCommand.cpp  PwdCommand.hpp  RegisterCommand.hpp  TypeCommand.cpp  TypeCommand.hpp  builtins.cpp  builtins.hpp  main.cpp  shell.cpp  shell.hpp
src/builtins/: ExitCommand.hpp  TypeCommand.cpp  cd.cpp  cd.hpp  echo.cpp  echo.hpp  exit.cpp  pwd.cpp  pwd.hpp  type.cpp  type.hpp
src/core/: CommandRegistry.cpp  ExternalCommand.cpp  ExternalCommand.hpp  core.cppm
src/shell/: shell.cpp  shell.hpp
